--- a/configs/sim/gmoccapy/gmoccapy_tool_sensor.ini
+++ b/configs/sim/gmoccapy/gmoccapy_tool_sensor.ini
@@ -80,6 +80,8 @@ ON_ABORT_COMMAND=O <on_abort> call
 #    #<selected_pocket>
 REMAP=M6  modalgroup=6 prolog=change_prolog ngc=change epilog=change_epilog
 
+REMAP=M61  modalgroup=6 prolog=settool_prolog ngc=settool_g43 epilog=settool_epilog
+
 # accessible in interp as #<_[section]name>
 # start of tool length touchoff probe
 [EMCMOT]
