--- a/configs/sim/gmoccapy/non_trivial_kinematics/table-rotary-tilting/xyzac-trt.ini
+++ b/configs/sim/gmoccapy/non_trivial_kinematics/table-rotary-tilting/xyzac-trt.ini
@@ -21,6 +21,15 @@ NGCGUI_SUBFILE = test-xyzac.ngc
 [RS274NGC]
 SUBROUTINE_PATH = ./examples
 PARAMETER_FILE = xyzac.var
+SUBROUTINE_PATH = ../../macros
+REMAP=M6  modalgroup=6 prolog=change_prolog ngc=change_g43 epilog=change_epilog
+REMAP=M61  modalgroup=6 prolog=settool_prolog ngc=settool_g43 epilog=settool_epilog
+
+# the Python plugins serves interpreter and task
+[PYTHON]
+PATH_PREPEND = ../../python
+TOPLEVEL = ../../python/toplevel.py
+LOG_LEVEL = 0
 
 [HAL]
 HALUI = halui
