--- a/configs/sim/gmoccapy/7_axis.ini
+++ b/configs/sim/gmoccapy/7_axis.ini
@@ -65,6 +65,9 @@ HALUI = halui
 HALFILE = core_sim_7.hal
 #HALFILE = simulated_home_9.hal
 
+# Single file that is executed after the GUI has started.
+POSTGUI_HALFILE = gmoccapy_postgui.hal
+
 [TRAJ]
 COORDINATES = X Y Z A B C U
 LINEAR_UNITS = mm
