--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
     - run: git fetch --recurse-submodules=no https://github.com/linuxcnc/linuxcnc +refs/tags/*:refs/tags/*
     - name: Build HTML docmentation
       run: |
+        set -e
+        set -x
         ./scripts/travis-install-build-deps.sh
         sudo apt-get install -y eatmydata
         sudo eatmydata apt --quiet --yes upgrade
