qt_istat: make log level configurable
In INI file with
[DISPLAY]
VCP_LOGLEVEL = <log_level>
With <log_level> =  one of DEBUG, INFO, WARNING, ERROR, CRITICAL

--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -17,6 +17,8 @@ DISPLAY = gmoccapy -i
 # VERBOSE     -v
 # ERROR       -q
 
+VCP_LOGLEVEL = ERROR
+
 # Cycle time, in milliseconds, that display will sleep between polls
 CYCLE_TIME = 100
 
