fix: Build: if LinuxCNC is relocated (via --prefix) TCLLIBPATH must be set

--- a/scripts/linuxcnc.in
+++ b/scripts/linuxcnc.in
@@ -90,6 +90,13 @@ else
 fi
 export PYTHONPATH
 
+if [ -z "$TCLLIBPATH" ]; then
+    TCLLIBPATH=$LINUXCNC_HOME/lib/tcltk
+else
+    TCLLIBPATH=$LINUXCNC_HOME/lib/tcltk:"$TCLLIBPATH"
+fi
+export TCLLIBPATH
+
 
 MODULE_EXT=@MODEXT@ # module extension, used when insmod'ing
 
