--- a/configs/sim/axis/remap/extend-builtins/extend-builtins.ini
+++ b/configs/sim/axis/remap/extend-builtins/extend-builtins.ini
@@ -67,7 +67,9 @@ REMAP= F   prolog=setfeed_prolog  ngc=setfeed epilog=setfeed_epilog
 REMAP= M0 modalgroup=4 ngc=extend_m0
 REMAP= M1 modalgroup=4 ngc=extend_m1
 REMAP= M60 modalgroup=4 ngc=extend_m60
-
+REMAP = M7  modalgroup=8 argspec=p ngc=extend_m7
+REMAP = M8  modalgroup=8 argspec=p ngc=extend_m8
+REMAP = M9  modalgroup=8 argspec=p ngc=extend_m9
 # this is important - read common_nc_subs/reset_state.ngc
 ON_ABORT_COMMAND= O <reset_state> call
 
