--- a/tests/linuxcncrsh/linuxcncrsh-test.ini
+++ b/tests/linuxcncrsh/linuxcncrsh-test.ini
@@ -1,4 +1,5 @@
 [EMC]
+MACHINE = linuxcncrsh-test
 VERSION = 1.1
 DEBUG = 0x7FFFFFFF
 RCS_DEBUG = 0xEF67FFFF
@@ -57,12 +58,13 @@ MAX_ACCELERATION = 100.0
 [KINS]
 KINEMATICS = trivkins
 JOINTS = 3
+SPINDLES = 2
 
 [JOINT_0]
 TYPE =             LINEAR
 HOME =             0.000
-MAX_LINEAR_VELOCITY =     4
-MAX_LINEAR_ACCELERATION = 100.0
+MAX_VELOCITY =     4
+MAX_ACCELERATION = 100.0
 BACKLASH =         0.000
 INPUT_SCALE =      4000
 OUTPUT_SCALE =     1.000
