--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -30,6 +30,19 @@ MAX_LINEAR_VELOCITY     = 166
 DEFAULT_LINEAR_VELOCITY = 100
 MAX_ANGULAR_VELOCITY    = 234
 DEFAULT_SPINDLE_SPEED   = 450
+# Initial value for spindle speed
+DEFAULT_SPINDLE_SPEED = 500
+
+# The following are not used, added here to suppress warnings (from qt_istat/logger).
+MIN_LINEAR_VELOCITY     = 0
+DEFAULT_SPINDLE_0_SPEED = 500
+MIN_SPINDLE_0_SPEED     = 0
+MAX_SPINDLE_0_SPEED     = 3000
+MAX_SPINDLE_0_OVERRIDE = 1.2
+MIN_SPINDLE_0_OVERRIDE = 0.5
+# The following are not relevant for this machine, added here to suppress warinings.
+MIN_ANGULAR_VELOCITY = 0.1
+DEFAULT_ANGULAR_VELOCITY = 360
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../nc_files/
