Add ignore of generated man-page of hm2_spix.9.

--- a/docs/man/.gitignore
+++ b/docs/man/.gitignore
@@ -337,6 +337,7 @@ man9/hm2_eth.9
 man9/hm2_pci.9
 man9/hm2_rpspi.9
 man9/hm2_spi.9
+man9/hm2_spix.9
 man9/homecomp.9
 man9/hostmot2.9
 man9/hypot.9
