Backport the hm2_spix driver for Raspberry Pi 3, 4 and 5 to the 2.9 branch.

--- a/docs/man/.gitignore
+++ b/docs/man/.gitignore
@@ -109,6 +109,7 @@ man9/gearchange.9
 man9/gray2bin.9
 man9/histobins.9
 man9/homecomp.9
+man9/hm2_spix.9
 man9/hypot.9
 man9/ilowpass.9
 man9/integ.9
