--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,16 @@ jobs:
       with:
         submodules: true
         fetch-depth: 0
-    - run: git fetch --recurse-submodules=no https://github.com/linuxcnc/linuxcnc +refs/tags/*:refs/tags/*
+    - run:
+        mkdir -p "subdir with blanks in name"
+        cd "subdir with blanks in name" && git fetch --recurse-submodules=no https://github.com/linuxcnc/linuxcnc +refs/tags/*:refs/tags/*
     - name: Build RIP & test
       run: |
         set -x
         sudo apt-get install -y eatmydata
-        eatmydata ./scripts/travis-install-build-deps.sh
+        eatmydata ./"subdir with blanks in name"/scripts/travis-install-build-deps.sh
         sudo eatmydata apt --quiet --yes upgrade
-        cd src
+        cd "subdir with blanks in name"/src
         eatmydata ./autogen.sh
         eatmydata ./configure --disable-check-runtime-deps
         eatmydata make -O -j$((1+$(nproc))) default pycheck V=1
