--- a/src/Makefile
+++ b/src/Makefile
@@ -1239,7 +1239,7 @@ tpmod-objs += libnml/posemath/sincos.o $(MATHSTUB)
 
 TORTOBJS = $(foreach file,$($(patsubst %.o,%,$(1))-objs), objects/rt$(file))
 ifeq ($(BUILD_SYS),uspace)
-EXTRA_CFLAGS += -fPIC -Os $(filter -Wextra,$(CFLAGS))
+EXTRA_CFLAGS += -fPIC -Os $(filter -Wextra,$(CFLAGS)) $(filter -Werror,$(CFLAGS))
 RTOBJS := $(sort $(foreach mod,$(obj-m),$(call TORTOBJS,$(mod))))
 RTDEPS := $(sort $(RTOBJS:.o=.d))
 
