--- a/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_xyzab.ini
+++ b/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_xyzab.ini
@@ -161,6 +161,8 @@ MAX_VELOCITY = 60.0
 MAX_ACCELERATION = 500.0
 
 [AXIS_Z]
+# used by external offsets for auto spindle lift and auto leveling
+OFFSET_AV_RATIO  = 0.2
 MIN_LIMIT = -115.0
 MAX_LIMIT = 10.0
 MAX_VELOCITY = 40.0
