--- a/debian/control.top.in
+++ b/debian/control.top.in
@@ -2,7 +2,9 @@ Source: linuxcnc
 Section: misc
 Priority: optional
 Maintainer: LinuxCNC Developers <emc-developers@lists.sourceforge.net>
-Uploaders: Sebastian Kuzminsky <seb@highlab.com>
+Uploaders:
+ Sebastian Kuzminsky <seb@highlab.com>,
+ Andy Pugh <bodgesoc@gmail.com>
 Build-Depends:
     @DEBHELPER@,
     @PYTHON_PACKAGING_DEPENDS@,
