--- a/debian/control.top.in
+++ b/debian/control.top.in
@@ -2,7 +2,10 @@ Source: linuxcnc
 Section: misc
 Priority: optional
 Maintainer: LinuxCNC Developers <emc-developers@lists.sourceforge.net>
-Uploaders: Jeff Epler <jepler@gmail.com>, Sebastian Kuzminsky <seb@highlab.com>
+Uploaders:
+    Jeff Epler <jepler@gmail.com>,
+    Sebastian Kuzminsky <seb@highlab.com>,
+    Andy Pugh <andy@bodgesoc.org>
 Build-Depends:
     @DEBHELPER@,
     @PYTHON_PACKAGING_DEPENDS@,
